--- a/requirements.txt
+++ b/requirements.txt
@@ -1,63 +1,129 @@
-aiofiles==24.1.0
-alembic==1.16.4
+aenum==3.1.16
+aiohappyeyeballs==2.6.1
+aiohttp==3.12.15
+aiosignal==1.4.0
 annotated-types==0.7.0
 anyio==4.9.0
-bcrypt==4.0.1
-certifi==2025.7.14
-cffi==1.17.1
-click==8.2.1
-cryptography==45.0.5
-dnspython==2.7.0
-ecdsa==0.19.1
-email_validator==2.2.0
+arrow==1.3.0
+attrs==23.2.0
+aws-sam-cli==1.142.1
+aws-sam-translator==1.99.0
+aws_lambda_builders==1.55.0
+awscli==1.41.15
+binaryornot==0.4.4
+blinker==1.9.0
+boto3==1.34.101
+boto3-stubs==1.38.46
+botocore==1.34.162
+botocore-stubs==1.38.46
+certifi==2024.2.2
+cffi==1.16.0
+cfn-lint==1.36.1
+chardet==5.2.0
+charset-normalizer==3.3.2
+chevron==0.14.0
+click==8.1.8
+colorama==0.4.6
+cookiecutter==2.6.0
+cryptography==42.0.7
+dateparser==1.2.2
+Deprecated==1.2.18
+distlib==0.3.8
+docker==7.1.0
+docutils==0.19
 fastapi==0.116.1
-fastapi-cli==0.0.8
-fastapi-cloud-cli==0.1.4
+filelock==3.13.4
+flake8==7.1.1
+Flask==3.1.1
+frozenlist==1.7.0
+future==1.0.0
 greenlet==3.2.3
-h11==0.16.0
-httpcore==1.0.9
-httptools==0.6.4
-httpx==0.28.1
-idna==3.10
-iniconfig==2.1.0
+h11==0.14.0
+idna==3.7
+itsdangerous==2.2.0
 Jinja2==3.1.6
-Mako==1.3.10
+jmespath==1.0.1
+jsonpatch==1.33
+jsonpointer==3.0.0
+jsonschema==4.24.1
+jsonschema-specifications==2025.4.1
+line-bot-sdk==3.17.1
+loguru==0.7.2
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
+mccabe==0.7.0
 mdurl==0.1.2
-optional==0.0.1
-packaging==25.0
-passlib==1.7.4
-pluggy==1.6.0
-prettytable==3.16.0
-psycopg2-binary==2.9.10
+mpmath==1.3.0
+multidict==6.6.3
+mypy-boto3-apigateway==1.38.36
+mypy-boto3-cloudformation==1.38.31
+mypy-boto3-ecr==1.38.37
+mypy-boto3-iam==1.38.14
+mypy-boto3-kinesis==1.38.8
+mypy-boto3-lambda==1.38.40
+mypy-boto3-s3==1.38.44
+mypy-boto3-schemas==1.38.0
+mypy-boto3-secretsmanager==1.38.0
+mypy-boto3-signer==1.38.0
+mypy-boto3-sqs==1.38.0
+mypy-boto3-stepfunctions==1.38.0
+mypy-boto3-sts==1.38.38
+mypy-boto3-xray==1.38.0
+mysql-connector-python==8.3.0
+networkx==3.5
+outcome==1.3.0.post0
+packaging==24.0
+pipenv==2023.12.1
+platformdirs==4.2.1
+propcache==0.3.2
 pyasn1==0.6.1
+pycodestyle==2.12.1
 pycparser==2.22
 pydantic==2.11.7
 pydantic_core==2.33.2
+pyflakes==3.2.0
 Pygments==2.19.2
-pytest==8.4.1
-pytest-asyncio==1.1.0
-python-dotenv==1.1.1
-python-jose==3.5.0
-python-multipart==0.0.20
+PyMySQL==1.1.0
+pyOpenSSL==25.1.0
+PySocks==1.7.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+python-slugify==8.0.4
+pytz==2025.2
 PyYAML==6.0.2
+referencing==0.36.2
+regex==2024.11.6
+requests==2.32.4
 rich==14.0.0
-rich-toolkit==0.14.8
-rignore==0.6.2
-rsa==4.9.1
-sentry-sdk==2.32.0
-shellingham==1.5.4
-six==1.17.0
+rpds-py==0.26.0
+rsa==4.7.2
+ruamel.yaml==0.18.14
+ruamel.yaml.clib==0.2.12
+s3transfer==0.10.4
+selenium==4.8.3
+six==1.16.0
 sniffio==1.3.1
+sortedcontainers==2.4.0
 SQLAlchemy==2.0.41
 starlette==0.47.1
-typer==0.16.0
+sympy==1.14.0
+text-unidecode==1.3
+tomlkit==0.13.3
+trio==0.25.1
+trio-websocket==0.11.1
+types-awscrt==0.27.4
+types-python-dateutil==2.9.0.20250708
+types-s3transfer==0.13.0
 typing-inspection==0.4.1
-typing_extensions==4.14.1
+typing_extensions==4.12.2
+tzlocal==5.3.1
 urllib3==2.5.0
 uvicorn==0.35.0
-uvloop==0.21.0
-watchfiles==1.1.0
-wcwidth==0.2.13
-websockets==15.0.1
+virtualenv==20.26.0
+watchdog==4.0.2
+webdriver-manager==4.0.0
+websocket-client==1.8.0
+Werkzeug==3.1.3
+wrapt==1.17.2
+wsproto==1.2.0
+yarl==1.20.1
